--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -36,12 +36,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actor.cs" />
+    <Compile Include="ClientManager.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="GameStateTest.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="PlayerConnection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerStateMessageBridge.cs" />
+    <Compile Include="State.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
