Add support for server side cooldowns and refactor how abilities are applied

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Creep.cs" />
     <Compile Include="Tower.cs" />
     <Compile Include="CollisionBuffer.cs" />
+    <Compile Include="AbilityEffects.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
