--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -30,11 +30,10 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NetworkLibrary, Version=1.0.6970.38568, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="System" />
+    <Reference Include="NetworkLibrary">
       <HintPath>lib\NetworkLibrary.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actor.cs" />
@@ -48,7 +47,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerStateMessageBridge.cs" />
     <Compile Include="State.cs" />
-    <Compile Include="Creep.cs" />
     <Compile Include="Tower.cs" />
     <Compile Include="CollisionBuffer.cs" />
     <Compile Include="AbilityEffects.cs" />
